# WRLD

./: .gitignore  README.md  package.json  tauri.conf.json
src/: index.html
src-tauri/: Cargo.toml
src/pages/: ai-tools.html
src/scripts/: main.js
src/styles/: ai-tools.css  main.css
src/styles/scripts/: ai-tools.js
